--- a/.env.prod.example
+++ b/.env.prod.example
@@ -9,3 +9,6 @@ CORS_ALLOW_ORIGINS=https://tu-app.netlify.app
 
 # Tu dominio público (ej: midatam.duckdns.org)
 DOMAIN=midatam.duckdns.org
+
+# PostgreSQL en Railway
+DATABASE_URL=postgresql://usuario:password@host:port/dbname
